Fix minor display issues

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -354,3 +354,5 @@ Create.new.complaint = Create new complaint
 Remove = Remove
 Newest = Newest
 Resources.not.found = There are no resources yet
+Create.post.button=Create post
+Create.complaint.button=Create complaint
