--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -354,3 +354,5 @@ Create.new.complaint = Crear nueva queja
 Remove = Eliminar
 Newest = Más nuevo
 Resources.not.found = Aún no hay recursos
+Create.post.button=Crear publicación
+Create.complaint.button=Crear queja
