--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -76,6 +76,8 @@ Feed=Feed
 Contacts=Contacts
 CreateNewPost.tooltip=Create new post 
 CreateNewPost.button=Create new post
+Create.post.button=Create post
+Create.complaint.button=Create complaint
 CreatePost.title=Create a post
 CreateComplaint.title=Create a complaint
 CreateNewAdminPost.tooltip=Create new admin post
