Add profession filter widget

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -352,3 +352,12 @@ Amenities.not.found = No amenities found
 
 Create.new.complaint = Create new complaint
 Remove = Remove
+
+Filter.by.professions = Filter by professions
+EnterAProfession = Enter up to 5 professions
+
+electrician = Electrician
+plumber = Plumber
+gardener = Gardener
+pool_maintenance = Pool Maintenance
+carpenter = Carpenter
