--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -352,3 +352,12 @@ Amenities.not.found = No se econtraron amenidades
 
 Create.new.complaint = Crear nueva queja
 Remove = Eliminar
+
+Filter.by.professions = Filtrar por profesiones
+EnterAProfession = Agregue hasta 5 profesiones
+
+electrician = Electricista
+plumber = Plomero
+gardener = Jardinero
+pool_maintenance = Piletero
+carpenter = Carpintero
