--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -353,3 +353,12 @@ Information.not.found = No information found
 Amenities.not.found = No amenities found
 Create.new.complaint = Create new complaint
 Remove = Remove
+
+Filter.by.professions = Filter by professions
+EnterAProfession = Enter up to 5 professions
+
+electrician = Electrician
+plumber = Plumber
+gardener = Gardener
+pool_maintenance = Pool Maintenance
+carpenter = Carpenter
