Introduce Marketplace display view
Added mock examples of products for marketplace section

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -361,9 +361,19 @@ Resources.not.found = There are no resources yet
 Filter.by.professions = Filter by professions
 EnterAProfession = Enter up to 5 professions
 
+Marketplace = Marketplace
+
 electrician = Electrician
 plumber = Plumber
 gardener = Gardener
 pool_maintenance = Pool Maintenance
 carpenter = Carpenter
 Edit.amenity = Edit amenity
+
+Admin.panel = Admin panel
+
+
+My.purchases = My purchases
+My.sales = My sales
+My.products = My products
+Sell = Sell
