--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -366,3 +366,10 @@ gardener = Gardener
 pool_maintenance = Pool Maintenance
 carpenter = Carpenter
 Edit.amenity = Edit amenity
+Marketplace = Marketplace
+Admin.panel= Admin panel
+
+My.purchases = My purchases
+My.sales = My sales
+My.products = My products
+Sell = Sell
