--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -367,3 +367,10 @@ gardener = Jardinero
 pool_maintenance = Piletero
 carpenter = Carpintero
 Edit.amenity = Editar amenidad
+Marketplace = Mercado
+Admin.panel = Administración
+
+My.purchases = Mis compras
+My.sales = Mis ventas
+My.products = Mis productos
+Sell = Vender
