Create selling form for marketplace

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -371,5 +371,22 @@ Admin.panel= Admin panel
 
 My.purchases = My purchases
 My.sales = My sales
-My.products = My products
+My.listings = My listings
 Sell = Sell
+Price = Price
+Product.description = Product description
+Product.name = Product name
+Select.up.to.3.images = Select up to 3 images
+Create.new.listing = Create new listing
+Create.listing = Create listing
+Listing.created.successfully = Listing created successfully!
+Listings.not.found = No listings found
+Listings = Listings
+Listing = Listing
+Purchase = Purchase
+Purchases = Purchases
+Sales = Sales
+Sale = Sale
+Sales.not.found = No sales found
+Purchases.not.found = No purchases found
+Purchase.created.successfully = Purchase created successfully!
