--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -372,5 +372,22 @@ Admin.panel = Administración
 
 My.purchases = Mis compras
 My.sales = Mis ventas
-My.products = Mis productos
+My.listings = Mis publicaciones
 Sell = Vender
+Price = Price
+Product.description = Descripción del producto
+Product.name = Nombre del producto
+Select.up.to.3.images = Seleccione hasta 3 imágenes
+Create.new.listing = Crear nueva publicación
+Create.listing = Crear publicación
+Listing.created.successfully = Publicación creada exitosamente!
+Listings.not.found = No se encontraron publicaciones
+Listings = Publicaciones
+Listing = Publicación
+Purchase = Compra
+Purchases = Compras
+Sales = Ventas
+Sale = Venta
+Sales.not.found = No se encontraron ventas
+Purchases.not.found = No se encontraron compras
+Purchase.created.successfully = Compra registrada exitosamente!
