--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -363,11 +363,11 @@ EnterAProfession = Enter up to 5 professions
 
 Marketplace = Marketplace
 
-electrician = Electrician
-plumber = Plumber
-gardener = Gardener
-pool_maintenance = Pool Maintenance
-carpenter = Carpenter
+ELECTRICIAN = Electrician
+PLUMBER = Plumber
+GARDENER = Gardener
+POOL_MAINTENANCE = Pool Maintenance
+CARPENTER = Carpenter
 Edit.amenity = Edit amenity
 
 Admin.panel = Admin panel
