--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -360,11 +360,11 @@ Create.complaint.button=Create complaint
 Filter.by.professions = Filter by professions
 EnterAProfession = Enter up to 5 professions
 
-electrician = Electrician
-plumber = Plumber
-gardener = Gardener
-pool_maintenance = Pool Maintenance
-carpenter = Carpenter
+ELECTRICIAN = Electrician
+PLUMBER = Plumber
+GARDENER = Gardener
+POOL_MAINTENANCE = Pool Maintenance
+CARPENTER = Carpenter
 Edit.amenity = Edit amenity
 Marketplace = Marketplace
 Admin.panel= Admin panel
