--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -361,11 +361,11 @@ Create.complaint.button=Crear queja
 Filter.by.professions = Filtrar por profesiones
 EnterAProfession = Agregue hasta 5 profesiones
 
-electrician = Electricista
-plumber = Plomero
-gardener = Jardinero
-pool_maintenance = Piletero
-carpenter = Carpintero
+ELECTRICIAN = Electricista
+PLUMBER = Plomero
+GARDENER = Jardinero
+POOL_MAINTENANCE = Piletero
+CARPENTER = Carpintero
 Edit.amenity = Editar amenidad
 Marketplace = Mercado
 Admin.panel = Administración
