Add primary listing creation form

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -390,3 +390,32 @@ Sale = Sale
 Sales.not.found = No sales found
 Purchases.not.found = No purchases found
 Purchase.created.successfully = Purchase created successfully!
+Add.photo = Add photo
+Add.to.favorites = Add to favorites
+Add.photos = Add photos
+Used = Used
+New = New
+Edit.listing = Edit listing
+This.item.is = This item is
+
+
+ELECTRONICS= Electronics
+APPLIANCES = Appliances
+HOME_FURNITURE = Home Furniture
+CLOTHING_FASHION = Clothing & Fashion
+HEALTH_BEAUTY = Health & Beauty
+SPORTS_OUTDOORS = Sports & Outdoors
+BOOKS_MEDIA = Books & Media
+TOYS_GAMES = Toys & Games
+JEWELRY_ACCESSORIES = Jewelry & Accessories
+AUTOMOTIVE = Automotive
+GROCERIES_FOOD = Groceries & Food
+PETS_SUPPLIES = Pets & Supplies
+HOME_IMPROVEMENT = Home Improvement
+GARDEN_OUTDOOR = Garden & Outdoor
+OFFICE_SUPPLIES = Office Supplies
+BABY_KIDS = Baby & Kids
+ARTS_CRAFTS = Arts & Crafts
+TRAVEL_LUGGAGE = Travel & Luggage
+MUSIC_INSTRUMENTS = Music & Instruments
+TECHNOLOGY = Technology
