--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -391,3 +391,32 @@ Sale = Venta
 Sales.not.found = No se encontraron ventas
 Purchases.not.found = No se encontraron compras
 Purchase.created.successfully = Compra registrada exitosamente!
+Add.photo = Agregar foto
+Add.to.favorites = Agregar a favoritos
+Add.photos = Agregar fotos
+Used = Usado
+New = Nuevo
+Edit.listing = Editar publicación
+This.item.is = Esta artículo es
+
+
+ELECTRONICS= Electrónica
+APPLIANCES = Electrodomésticos
+HOME_FURNITURE = Muebles para el hogar
+CLOTHING_FASHION = Ropa y moda
+HEALTH_BEAUTY = Salud y belleza
+SPORTS_OUTDOORS = Deportes y aire libre
+BOOKS_MEDIA = Libros y medios
+TOYS_GAMES = Juguetes y juegos
+JEWELRY_ACCESSORIES = Joyas y accesorios
+AUTOMOTIVE = Automotriz
+GROCERIES_FOOD = Comestibles y alimentos
+PETS_SUPPLIES = Mascotas y suministros
+HOME_IMPROVEMENT = Mejoras para el hogar
+GARDEN_OUTDOOR = Jardín y exterior
+OFFICE_SUPPLIES = Suministros de oficina
+BABY_KIDS = Bebés y niños
+ARTS_CRAFTS = Artes y manualidades
+TRAVEL_LUGGAGE = Viajes y equipaje
+MUSIC_INSTRUMENTS = Música e instrumentos
+TECHNOLOGY = Tecnología
