Add duplicate email validation
Validation for an email already in use in sign up and worker sign up forms

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -64,6 +64,8 @@ NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Invalid Neighborhood
 NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Invalid Neighborhood
 LanguageConstraint.signupForm.language=Invalid Language
 LanguageConstraint.workerSignupForm.w_language=Invalid Language
+EmailConstraint.signupForm.mail=Email already in use
+EmailConstraint.workerSignupForm.mail=Email already in use
 posted=posted 
 neiboSlogan=Slogan
 Announcements=Announcements
