--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -64,6 +64,8 @@ NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Barrrio inválido
 NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Barrrio inválido
 LanguageConstraint.signupForm.language=Idioma inválido
 LanguageConstraint.workerSignupForm.w_language=Idioma inválido
+EmailConstraint.signupForm.mail=Dirección de Email ya en uso
+EmailConstraint.workerSignupForm.mail=Dirección de Email ya en uso
 posted=publicado
 neiboSlogan=Eslógan
 Announcements=Anuncios
