Allow for product publication early version

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -419,3 +419,7 @@ ARTS_CRAFTS = Arts & Crafts
 TRAVEL_LUGGAGE = Travel & Luggage
 MUSIC_INSTRUMENTS = Music & Instruments
 TECHNOLOGY = Technology
+OTHER = Other
+NONE = None
+
+See = See
