--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -420,3 +420,8 @@ ARTS_CRAFTS = Artes y manualidades
 TRAVEL_LUGGAGE = Viajes y equipaje
 MUSIC_INSTRUMENTS = Música e instrumentos
 TECHNOLOGY = Tecnología
+OTHER = Otros
+NONE = Ninguno
+
+See = ver
+
