--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -422,3 +422,8 @@ ARTS_CRAFTS = Arts & Crafts
 TRAVEL_LUGGAGE = Travel & Luggage
 MUSIC_INSTRUMENTS = Music & Instruments
 TECHNOLOGY = Technology
+OTHER = Other
+NONE = None
+
+
+See = See
