Show product individually in marketplace

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -429,3 +429,9 @@ NONE = None
 
 
 See = See
+All = All
+Ask.the.seller = Ask the seller
+Ask = Ask
+Buy = Buy
+Categories = Categories
+Products.not.found = There are no products available in this category yet
