--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -426,4 +426,11 @@ OTHER = Otros
 NONE = Ninguno
 
 See = ver
+All = Todos
+Ask.the.seller = Preguntar al vendedor
+Ask = Preguntar
+Buy = Comprar
+Categories = Categorías
+Products.not.found = No se encontraron productos en esta categoría
+
 
