--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -425,3 +425,10 @@ OTHER = Other
 NONE = None
 
 See = See
+All = All
+Ask.the.seller = Ask the seller
+Ask = Ask
+Buy = Buy
+
+Categories = Categories
+Products.not.found = There are no products available in this category yet
