Include worker requests

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -156,6 +156,7 @@ Welcome.phrase.1=Hello, you're one step away from becoming a neighbor!
 Welcome.phrase.2=We've already sent your request to the administration,
 Welcome.phrase.3=we are configuring your account to provide you with the best experience.
 Welcome.phrase.4=We will notify you when your account is ready.
+Welcome.phrase.5=Hello, you're one step away from becoming a worker!
 Rejected.phrase.1=Hello, looks like you aren't associated with a neighborhood yet!
 Rejected.phrase.2=Please select one of the following neighborhoods to continue.
 Request=Request
@@ -377,3 +378,5 @@ My.purchases = My purchases
 My.sales = My sales
 My.products = My products
 Sell = Sell
+
+Worker.requests = Worker Requests
