--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -149,6 +149,7 @@ Welcome.phrase.1=¡Hola, estás a un paso de finalizar!
 Welcome.phrase.2=Ya eviamos tu solicitud a la administración,
 Welcome.phrase.3=estamos configurando tu cuenta para que tengas la mejor experiencia.
 Welcome.phrase.4=Te avisaremos cuando esté lista.
+Welcome.phrase.5=¡Hola, estás a un paso de finalizar tu registro como trabajador!
 Rejected.phrase.1=¡Hola, aún no estás asociado a un barrio!
 Rejected.phrase.2=Seleccione uno de los siguientes barrios para continuar.
 Request=Solicitar
@@ -374,3 +375,5 @@ My.purchases = Mis compras
 My.sales = Mis ventas
 My.products = Mis productos
 Sell = Vender
+
+Worker.requests = Solicitudes de Trabajadores
