Allow for a request in marketplace product

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -424,6 +424,8 @@ TECHNOLOGY = Technology
 OTHER = Other
 NONE = None
 
+OK = OK
+Ok = Ok
 See = See
 All = All
 Ask.the.seller = Ask the seller
@@ -432,3 +434,4 @@ Buy = Buy
 
 Categories = Categories
 Products.not.found = There are no products available in this category yet
+Request.buy.message = Send a message to the seller with your offer and contact information.
