--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -427,7 +427,8 @@ TECHNOLOGY = Technology
 OTHER = Other
 NONE = None
 
-
+OK = OK
+Ok = Ok
 See = See
 All = All
 Ask.the.seller = Ask the seller
@@ -435,3 +436,4 @@ Ask = Ask
 Buy = Buy
 Categories = Categories
 Products.not.found = There are no products available in this category yet
+Request.buy.message = Send a message to the seller with your offer and contact information.
