--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -425,6 +425,8 @@ TECHNOLOGY = Tecnología
 OTHER = Otros
 NONE = Ninguno
 
+Ok = Ok
+OK = Ok
 See = ver
 All = Todos
 Ask.the.seller = Preguntar al vendedor
@@ -432,5 +434,6 @@ Ask = Preguntar
 Buy = Comprar
 Categories = Categorías
 Products.not.found = No se encontraron productos en esta categoría
+Request.buy.message = Envíe un mensaje al vendedor con su oferta e información de contacto.
 
 
