Fix request message for marketplace product

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -436,5 +436,6 @@ Buy = Buy
 Categories = Categories
 Products.not.found = There are no products available in this category yet
 Request.buy.message = Send a message to the seller with your offer and contact information.
+Sending.your.message = Sending your message
 
 Worker.requests = Worker Requests
