--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -438,5 +438,5 @@ Buy = Buy
 Categories = Categories
 Products.not.found = There are no products available in this category yet
 Request.buy.message = Send a message to the seller with your offer and contact information.
-
+Sending.your.message = Sending your message
 Worker.requests = Worker Requests
