--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -436,5 +436,6 @@ Buy = Comprar
 Categories = Categorías
 Products.not.found = No se encontraron productos en esta categoría
 Request.buy.message = Envíe un mensaje al vendedor con su oferta e información de contacto.
+Sending.your.message = Enviando su mensaje
 
 Worker.requests = Solicitudes de Trabajadores
