Add admin worker list

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -435,3 +435,5 @@ Categories = Categories
 Products.not.found = There are no products available in this category yet
 
 Worker.requests = Worker Requests
+Worker.list = Worker List
+No.verified.workers = No verified workers yet
