--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -435,3 +435,5 @@ Categories = Categorías
 Products.not.found = No se encontraron productos en esta categoría
 
 Worker.requests = Solicitudes de Trabajadores
+Worker.list = Lista de Trabajadores
+No.verified.workers = No hay trabajadores verificados aún
