Add pagination, constraints, and alter requests model
Adds pagination parameters for product select methods, adds constraints for events and listings, and alters the request model id so users can create multiple requests on a single product

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -70,6 +70,18 @@ LanguageConstraint.signupForm.language=Invalid Language
 LanguageConstraint.workerSignupForm.w_language=Invalid Language
 EmailConstraint.signupForm.mail=Email already in use
 EmailConstraint.workerSignupForm.mail=Email already in use
+Pattern.workerSignupForm.phoneNumber= Phone number must only contain numbers, +, -, spaces, and parentheses
+NotBlank.eventForm.name = Name field is required
+NotBlank.eventForm.description = Description field is required
+NotBlank.eventForm.startTime = Start time field is required
+NotBlank.eventForm.endTime = End time field is required
+Size.eventForm.name = Name must be less than 100 characters
+Size.eventForm.description = Description must be less than 2000 characters
+Size.listingForm.name = Name must be less than 100 characters
+NotBlank.listingForm.name = Name field is required
+NotBlank.listingForm.price = Price field is required
+NotBlank.listingForm.description = Description field is required
+Size.listingForm.description = Description must be less than 2000 characters
 
 posted=posted 
 neiboSlogan=Slogan
@@ -163,6 +175,8 @@ Rejected.phrase.2=Please select one of the following neighborhoods to continue.
 Request=Request
 Login.error.message.1=Sorry, we couldn't log you in. 
 Login.error.message.2=Please check your email and password and try again.
+Signup.error.message.1=Sorry, we couldn't sign you up. 
+Signup.error.message.2=Please check the information you entered and try again.
 CreateNewAmenity.button=Create Amenity
 Description=Description
 OpeningClosingTimes=Opening and closing times
