Alter all forms
Alter forms so that if the field is empty that error message is the only one displayed, and also create custom validators for department and professions dropdowns

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -78,6 +78,7 @@ NotBlank.listingForm.name = Name field is required
 NotBlank.listingForm.price = Price field is required
 NotBlank.listingForm.description = Description field is required
 Size.listingForm.description = Description must be less than 2000 characters
+ProfessionsConstraint.workerSignupForm.professions=Invalid profession
 
 posted=posted 
 neiboSlogan=Slogan
