--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -78,6 +78,7 @@ NotBlank.listingForm.name = Nombre requerido
 NotBlank.listingForm.price = Precio requerido
 NotBlank.listingForm.description = Descripción requerida
 Size.listingForm.description = Descripción debe contener menos de 1000 caracteres
+ProfessionsConstraint.workerSignupForm.professions= Profesión inválida
 
 posted=publicado
 neiboSlogan=Eslógan
