--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -78,10 +78,11 @@ NotBlank.eventForm.endTime = End time field is required
 Size.eventForm.name = Name must be less than 100 characters
 Size.eventForm.description = Description must be less than 2000 characters
 Size.listingForm.name = Name must be less than 100 characters
-NotBlank.listingForm.name = Name field is required
+NotBlank.listingForm.title = Title field is required
 NotBlank.listingForm.price = Price field is required
 NotBlank.listingForm.description = Description field is required
 Size.listingForm.description = Description must be less than 2000 characters
+ProfessionsConstraint.workerSignupForm.professions=Invalid profession
 
 posted=posted 
 neiboSlogan=Slogan
