Create departemnt urls for different products

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -400,7 +400,8 @@ Select.up.to.3.images = Seleccione hasta 3 imágenes
 Create.new.listing = Crear nueva publicación
 Create.listing = Crear publicación
 Listing.created.successfully = Publicación creada exitosamente!
-Listings.not.found = No se encontraron publicaciones
+Listings.not.found = Aún no hay publicaciones
+Create.one = ¡Creá una!
 Listings = Publicaciones
 Listing = Publicación
 Purchase = Compra
@@ -457,3 +458,8 @@ Sending.your.message = Enviando su mensaje
 Worker.requests = Solicitudes de Trabajadores
 Worker.list = Lista de Trabajadores
 No.verified.workers = No hay trabajadores verificados aún
+
+Question = Pregunta
+Answer = Respuesta
+No.one.asked = Nadie hizo preguntas todavía. 
+Ask.first = ¡Hacé la primera!
