Add rejected listings

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -457,3 +457,6 @@ Sending.your.message = Sending your message
 Worker.requests = Worker Requests
 Worker.list = Worker List
 No.verified.workers = No verified workers yet
+
+Verified = Verified
+Rejected = Rejected
