--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -457,3 +457,6 @@ Sending.your.message = Enviando su mensaje
 Worker.requests = Solicitudes de Trabajadores
 Worker.list = Lista de Trabajadores
 No.verified.workers = No hay trabajadores verificados aún
+
+Verified = Verificados
+Rejected = Rechazados
