Fix some bugs and allow for worker tags messages

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -463,3 +463,9 @@ Question = Question
 Answer = Answer
 No.one.asked = No one asked yet
 Ask.first = Be the first!
+
+Sold.by = Sold by
+Sold = Sold
+Seller = Seller
+Bought.by = Bought by
+Bought = Bought
