--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -463,3 +463,9 @@ Question = Pregunta
 Answer = Respuesta
 No.one.asked = Nadie hizo preguntas todavía. 
 Ask.first = ¡Hacé la primera!
+
+Sold.by = Vendido por
+Sold = Vendido
+Seller = Vendedor
+Bought.by = Comprado por
+Bought = Comprado
