Rearrange marketplace views
Fixed marketplace views and actions, wired buying actions and fixed
neighborhoods view

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -472,3 +472,10 @@ Bought = Bought
 
 Verified = Verified
 Rejected = Rejected
+
+Your.listings = Your listings
+View.listing = View listing
+View = View
+Mark.as.sold = Mark as sold
+Requester = Requester
+List.of.interested.people = List of interested people
