--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -472,3 +472,10 @@ Bought = Comprado
 
 Verified = Verificados
 Rejected = Rechazados
+
+Your.listings = Tus publicaciones
+View.listing = Ver publicación
+Mark.as.sold = Marcar como vendido
+Requester = Solicitante
+List.of.interested.people = Lista de personas interesadas
+
