Allow for replies in product quesitons

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -481,3 +481,7 @@ Requester = Requester
 List.of.interested.people = List of interested people
 
 Profession = Profession
+Reply = Reply
+Your.reply = Your reply
+Ask.a.question = Ask a question
+Recently.asked.questions = Recently asked questions
