--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -482,3 +482,9 @@ List.of.interested.people = Lista de personas interesadas
 
 
 Profession = Profesión
+Reply = Responder
+Your.reply = Tu respuesta
+Ask.a.question = Escribí una pregunta
+Recently.asked.questions = Preguntas recientes
+
+
