Fix admin left column

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -485,3 +485,4 @@ Reply = Reply
 Your.reply = Your reply
 Ask.a.question = Ask a question
 Recently.asked.questions = Recently asked questions
+Workers.lit = Workers
