--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -486,5 +486,7 @@ Reply = Responder
 Your.reply = Tu respuesta
 Ask.a.question = Escribí una pregunta
 Recently.asked.questions = Preguntas recientes
+Workers.lit = Trabajadores
+
 
 
