Clean up lists on admin panel

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -132,6 +132,7 @@ Reject=Reject
 Ignore=Ignore
 No.new.requests=No new requests
 No.verified.Users=No verified users yet
+No.rejected.Users=No rejected users yet
 Unverify=Unverify
 Loading=Loading
 Creating.your.post=Creating your post
@@ -458,6 +459,7 @@ Sending.your.message = Sending your message
 Worker.requests = Worker Requests
 Worker.list = Worker List
 No.verified.workers = No verified workers yet
+No.rejected.workers = No rejected workers yet
 
 Question = Question
 Answer = Answer
