--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -132,6 +132,7 @@ Reject=Rechazar
 Ignore=Ignorar
 No.new.requests=No hay nuevas solicitudes
 No.verified.Users=No hay usuarios verificados aún
+No.rejected.Users=No hay usuarios rechazados aún
 Unverify=Desverificar
 Loading=Cargando
 Creating.your.post=Creando tu publicación
@@ -458,6 +459,7 @@ Sending.your.message = Enviando su mensaje
 Worker.requests = Solicitudes de Trabajadores
 Worker.list = Lista de Trabajadores
 No.verified.workers = No hay trabajadores verificados aún
+No.rejected.workers = No hay trabajadores rechazados aún
 
 Question = Pregunta
 Answer = Respuesta
