Fix professions dropdown in worker signup

--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -66,6 +66,7 @@ Size.reviewForm.review=Must be less than 255 characters
 NeighborhoodConstraint.signupForm.neighborhoodId=Invalid Neighborhood
 NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Invalid Neighborhood
 NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Invalid Neighborhood
+NotNull.neighborhoodsForm.neighborhoodIds=Must select at least one neighborhood
 LanguageConstraint.signupForm.language=Invalid Language
 LanguageConstraint.workerSignupForm.w_language=Invalid Language
 EmailConstraint.signupForm.mail=Email already in use
