--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -62,6 +62,7 @@ Size.contactForm.contactPhone=Must be less than 20 characters
 NeighborhoodConstraint.signupForm.neighborhoodId=Invalid Neighborhood
 NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Invalid Neighborhood
 NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Invalid Neighborhood
+NotNull.neighborhoodsForm.neighborhoodIds=Must select at least one neighborhood
 LanguageConstraint.signupForm.language=Invalid Language
 LanguageConstraint.workerSignupForm.w_language=Invalid Language
 EmailConstraint.signupForm.mail=Email already in use
