--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -59,9 +59,10 @@ Size.contactForm.contactName=Debe contener menos de 64 caracteres
 Size.contactForm.contactAddress=Debe contener menos de 64 caracteres
 NotBlank.contactForm.contactPhone=Número de teléfono requerido
 Size.contactForm.contactPhone=Debe contener menos de 20 caracteres
-NeighborhoodConstraint.signupForm.neighborhoodId=Barrrio inválido
-NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Barrrio inválido
-NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Barrrio inválido
+NeighborhoodConstraint.signupForm.neighborhoodId=Barrio inválido
+NeighborhoodConstraint.neighborhoodForm.neighborhoodId=Barrio inválido
+NeighborhoodConstraint.neighborhoodsForm.neighborhoodIds=Barrio inválido
+NotNull.neighborhoodsForm.neighborhoodIds=Debe seleccionar por lo menos un barrio
 LanguageConstraint.signupForm.language=Idioma inválido
 LanguageConstraint.workerSignupForm.w_language=Idioma inválido
 EmailConstraint.signupForm.mail=Dirección de Email ya en uso
