--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -490,6 +490,9 @@ Your.reply = Tu respuesta
 Ask.a.question = Escribí una pregunta
 Recently.asked.questions = Preguntas recientes
 Workers.lit = Trabajadores
+Request.date = Fecha de solicitud
+My.requests = Mis solicitudes
+
 
 
 
