--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -489,3 +489,5 @@ Your.reply = Your reply
 Ask.a.question = Ask a question
 Recently.asked.questions = Recently asked questions
 Workers.lit = Workers
+Request.date = Request date
+My.requests = My requests
