Add quantity to products sell options

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -491,3 +491,13 @@ Recently.asked.questions = Recently asked questions
 Workers.lit = Workers
 Request.date = Request date
 My.requests = My requests
+Quantity = Quantity
+Total = Total
+In.stock = In stock
+Units = Units
+Unit = Unit
+Sold.out = Sold out
+Available = Available
+
+Range.listingForm.quantity = Quantity must be between 1 and 100
+NotNull.listingForm.quantity = Quantity field is required
