--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -492,7 +492,14 @@ Recently.asked.questions = Preguntas recientes
 Workers.lit = Trabajadores
 Request.date = Fecha de solicitud
 My.requests = Mis solicitudes
+Quantity = Cantidad
+Total = Total
+In.stock = En stock
+Units = Unidades
+Unit = Unidad
+Sold.out = Agotado
+Available = Disponible
 
 
-
-
+Range.listingForm.quantity = La cantidad debe estar entre 1 y 100
+NotNull.listingForm.quantity = La cantidad es requerida
