Make a weird merge during flight mode

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -505,3 +505,6 @@ NotNull.listingForm.quantity = Quantity field is required
 
 Seller.hub = Seller Hub
 Buyer.hub = Buyer Hub
+Confirm = Confirm
+Confirm.sale = Confirm sale
+Sold.message = Select the amount of units you want to sell and confirm the sale.
