--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -507,3 +507,7 @@ NotNull.listingForm.quantity = La cantidad es requerida
 
 Seller.hub = Panel del vendedor
 Buyer.hub = Panel del comprador
+Confirm = Confirmar
+
+Confirm.sale = Confirmar venta
+Sold.message = Seleccioná la cantidad de unidades que querés vender y confirmá la venta.
