Move update product logic to service layer

--- a/services/src/main/resources/mailMessages/messages_es.properties
+++ b/services/src/main/resources/mailMessages/messages_es.properties
@@ -3,10 +3,10 @@ new.neighbor.message = Hay un nuevo {0} que quiere unirse a {1}:
 new.announcement.message = Hay un nuevo anuncio: {0}
 new.comment.message = There is a new comment on {0}!
 events.message = ¡Estás suscrito a los siguientes eventos de {0}
-inquiry.message = ${0} en el producto: ${1}
+inquiry.message = {0} en el producto: {1}
 amenity.first.message = Se ha añadido una nueva amenidad en su barrio: {0}!
 amenity.second.message = Descripción: {0}
-request.first.message = Tienes una nueva solicitud de ${0} ${1} en tu producto: ${2}
+request.first.message = Tienes una nueva solicitud de {0} {1} en tu producto: {2}
 request.second.message = ${0} te ha dejado un mensaje:
 verification.message = Te han verificado en {0}!
 
