Keep on fixing micro issues

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -508,3 +508,6 @@ Buyer.hub = Buyer Hub
 Confirm = Confirm
 Confirm.sale = Confirm sale
 Sold.message = Select the amount of units you want to sell and confirm the sale.
+Service.profile = Service profile
+Business.card = Business card
+
