--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -511,3 +511,6 @@ Confirm = Confirmar
 
 Confirm.sale = Confirmar venta
 Sold.message = Seleccioná la cantidad de unidades que querés vender y confirmá la venta.
+Service.profile = Perfil de servicio
+Business.card = Tarjeta de servicio
+
