Format dates in marketplace and fix titles

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -515,3 +515,5 @@ Service.profile = Perfil de servicio
 Business.card = Tarjeta de servicio
 
 eg = ej.
+Currently.requesting = Actualmente solicitando
+
