--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -512,3 +512,4 @@ Sold.message = Select the amount of units you want to sell and confirm the sale.
 Service.profile = Service profile
 Business.card = Business card
 eg = e.g.
+Currently.requesting = Currently requesting
