Add missing message properties for forms

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -13,6 +13,7 @@ Size.publishForm.message=Debe contener menos de 2000 caracteres
 NotBlank.publishForm.email=Email requerido
 Size.publishForm.email=Debe contener menos de 100 caracteres
 Email.publishForm.email=Debe ser un email válido
+TagsConstraint.publishForm.tags = Etiquetas inválidas
 ImageConstraint.publishForm.imageFile=Formato de imágen inválido
 Pattern.commentForm.name=Nombre solo debe contener letras
 NotBlank.commentForm.name=Nombre requerido
@@ -79,7 +80,55 @@ NotBlank.listingForm.name = Nombre requerido
 NotBlank.listingForm.price = Precio requerido
 NotBlank.listingForm.description = Descripción requerida
 Size.listingForm.description = Descripción debe contener menos de 1000 caracteres
+Range.listingForm.quantity = La cantidad debe estar entre 1 y 100
+NotNull.listingForm.quantity = La cantidad es requerida
+NotBlank.listingForm.departmentId = Departamento requerido
+DepartmentConstraint.listingForm.departmentId = Departamento inválido
+NotNull.listingForm.used = Estado requerido
+MultipleImagesConstraint.listingForm.imageFiles = Formato de imágen inválido
 ProfessionsConstraint.workerSignupForm.professions= Profesión inválida
+NotBlank.editWorkerProfileForm.phoneNumber = Número de teléfono requerido
+Size.editWorkerProfileForm.phoneNumber = Debe contener menos de 64 caracteres
+NotBlank.editWorkerProfileForm.address = Dirección requerida
+Pattern.editWorkerProfileForm.address = Dirección solo debe contener letras, números y guiones
+Size.editWorkerProfileForm.address = Debe contener menos de 128 caracteres
+NotBlank.editWorkerProfileForm.businessName = Nombre de empresa requerida
+Pattern.editWorkerProfileForm.businessName = Nombre solo debe contener letras, números y guiones
+Size.editWorkerProfileForm.businessName = Debe contener menos de 128 caracteres
+NotBlank.editWorkerProfileForm.bio = Bio requerido
+Size.editWorkerProfileForm.bio = Debe contener menos de 255 caracteres
+Pattern.editWorkerProfileForm.bio = Bio solo debe contener letras, números y guiones
+NotNull.markAsSoldForm.quantity = Cantidad requerida
+Range.markAsSoldForm.quantity = La cantidad debe estar entre 1 y 100
+NotNull.markAsSoldForm.buyerId = Campo de comprador requerido
+NotNull.markAsSoldForm.requestId = Campo de solicitud requerido
+NotBlank.phoneRequestForm.requestMessage = Mensaje requerido
+Size.phoneRequestForm.requestMessage = Debe contener menos de 255 caracteres
+NotBlank.phoneRequestForm.phoneNumber = Número de teléfono requerido
+Size.phoneRequestForm.phoneNumber = Debe contener menos de 64 caracteres
+Pattern.phoneRequestForm.phoneNumber = Número de teléfono solo debe contener números, +, -
+ImageConstraint.profilePictureForm.imageFile = Formato de imágen inválido
+NotBlank.questionForm.questionMessage = Mensaje requerido
+Size.questionForm.questionMessage = Debe contener menos de 500 caracteres
+NotBlank.replyForm.inquiryId = Id de consulta requerido
+NotBlank.replyForm.replyMessage = Mensaje requerido
+Size.replyForm.replyMessage = Debe contener menos de 300 caracteres
+NotBlank.requestForm.requestMessage = Mensaje requerido
+Size.requestForm.requestMessage = Debe contener menos de 500 caracteres
+DateAfterConstraint.reservationForm.date = Fecha inválida
+ReservationTimeConstraint.reservationForm = Tiempos de reserva inválidos
+Size.resourceForm.description = Descripción debe contener menos de 100 caracteres
+ImageConstraint.resourceForm.imageFile = Formato de imágen inválido
+NotBlank.resourceForm.title = Título requerido
+Size.resourceForm.title = Título debe contener menos de 64 caracteres
+NotNull.reviewForm.rating = Calificación requerida
+Range.reviewForm.rating = Calificación debe estar entre 1 y 5
+NotBlank.reviewForm.review = Reseña requerida
+Size.reviewForm.review = Reseña debe contener menos de 255 caracteres
+Size.userForm.email = Debe contener entre 6 y 100 caracteres
+Email.userForm.email = Debe ser un email válido
+Size.userForm.password = Debe contener al menos 8 caracteres
+Size.userForm.repeatPassword = Debe contener al menos 8 caracteres
 
 posted=publicado
 neiboSlogan=Eslógan
@@ -331,6 +380,8 @@ Size.workerSignupForm.address=Debe contener menos de 128 caracteres
 Pattern.workerSignupForm.businessName=Nombre solo debe contener letras, números y guiones
 NotBlank.workerSignupForm.businessName=Nombre de empresa requerida
 Size.workerSignupForm.businessName=Debe contener menos de 128 caracteres
+ProfessionsConstraint.workerSignupForm.professionIds= Profesión inválida
+EmailConstraint.workerSignupForm.w_mail = Dirección de Email ya en uso
 Time=Hora
 Plumber=Plomero
 Electrician=Electricista
@@ -499,10 +550,6 @@ Units = Unidades
 Unit = Unidad
 Sold.out = Agotado
 Available = Disponible
-
-
-Range.listingForm.quantity = La cantidad debe estar entre 1 y 100
-NotNull.listingForm.quantity = La cantidad es requerida
 
 
 Seller.hub = Panel del vendedor
