--- a/webapp/src/main/resources/i18n/messages.properties
+++ b/webapp/src/main/resources/i18n/messages.properties
@@ -84,6 +84,52 @@ NotBlank.listingForm.price = Price field is required
 NotBlank.listingForm.description = Description field is required
 Size.listingForm.description = Description must be less than 2000 characters
 ProfessionsConstraint.workerSignupForm.professions=Invalid profession
+NotBlank.editWorkerProfileForm.phoneNumber = Phone number field is required
+Size.editWorkerProfileForm.phoneNumber = Must be less than 64 characters
+NotBlank.editWorkerProfileForm.address = Address field is required
+Pattern.editWorkerProfileForm.address = Address must only contain letters, numbers and hyphens
+Size.editWorkerProfileForm.address = Must be less than 128 characters
+NotBlank.editWorkerProfileForm.businessName = Business name field is required
+Pattern.editWorkerProfileForm.businessName = Business name must only contain letters, numbers and hyphens
+Size.editWorkerProfileForm.businessName = Must be less than 128 characters
+NotBlank.editWorkerProfileForm.bio = Bio field is required
+Size.editWorkerProfileForm.bio = Must be less than 255 characters
+Pattern.editWorkerProfileForm.bio = Bio must only contain letters, numbers and hyphens
+NotBlank.phoneRequestForm.requestMessage = Message field is required
+Size.phoneRequestForm.requestMessage = Must be less than 500 characters 
+NotBlank.phoneRequestForm.phoneNumber = Phone number field is required
+Size.phoneRequestForm.phoneNumber = Must be less than 64 characters
+Pattern.phoneRequestForm.phoneNumber = Phone number must only contain numbers, plus, and hyphens
+ImageConstraint.profilePictureForm.imageFile = Invalid image format
+NotBlank.questionForm.questionMessage = Message field is required
+Size.questionForm.questionMessage = Must be less than 500 characters
+NotBlank.replyForm.inquiryId = Inquiry field is required
+NotBlank.replyForm.replyMessage = Message field is required
+Size.replyForm.replyMessage = Must be less than 300 characters
+NotBlank.requestForm.requestMessage = Message field is required
+Size.requestForm.requestMessage = Must be less than 500 characters
+DateAfterConstraint.reservationForm.date = Invalid date
+ReservationTimeConstraint.reservationForm = Invalid times
+Size.resourceForm.description = Description must be less than 100 characters
+ImageConstraint.resourceForm.imageFile = Invalid image format
+NotBlank.resourceForm.title = Title field is required
+Size.resourceForm.title = Title must be less than 64 characters
+Size.userForm.email = Email must be between 6 and 100 characters
+Email.userForm.email = Must be a valid email address
+Size.userForm.password = Password must be at least 8 characters
+Size.userForm.repeatPassword = Password must be at least 8 characters
+NotBlank.listingForm.departmentId = Department field is required
+DepartmentConstraint.listingForm.departmentId = Invalid department
+NotNull.listingForm.used = Used field is required
+MultipleImagesConstraint.listingForm.imageFiles = Invalid image format
+Size.listingForm.title = Title must be less than 100 characters
+TagsConstraint.publishForm.tags = Invalid tags
+ProfessionsConstraint.workerSignupForm.professionIds= Invalid profession
+EmailConstraint.workerSignupForm.w_mail = Email already in use
+NotNull.MarkAsSoldForm.quantity = Quantity field is required
+Range.MarkAsSoldForm.quantity = Quantity must be between 1 and 100
+NotNull.MarkAsSoldForm.buyerId = Buyer field is required
+NotNull.MarkAsSoldForm.requestId = Request field is required
 
 posted=posted 
 neiboSlogan=Slogan
