--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -12,6 +12,7 @@ NotBlank.publishForm.message=Message field is required
 Size.publishForm.message=Must be less than 2000 characters
 NotBlank.publishForm.email=Email field is required
 Size.publishForm.email=Must be less than 100 characters
+TagsConstraint.publishForm.tags = Invalid tags
 Email.publishForm.email=Must be a valid email address
 ImageConstraint.publishForm.imageFile=Invalid image format
 Pattern.commentForm.name=The name must only contain letters
@@ -36,8 +37,6 @@ Size.signupForm.name=Must be less than 100 characters
 Pattern.signupForm.surname=The surname must only contain letters
 NotBlank.signupForm.surname=Surname field is required
 Size.signupForm.surname=Must be less than 100 characters
-NotBlank.signupForm.neighborhood=Neighborhood field is required
-Size.signupForm.neighborhood=Must be less than 100 characters
 NotBlank.signupForm.mail=Email field is required
 Size.signupForm.mail=Must be less than 100 characters
 Email.signupForm.mail=Must be a valid email address
@@ -74,12 +73,56 @@ NotBlank.eventForm.startTime = Start time field is required
 NotBlank.eventForm.endTime = End time field is required
 Size.eventForm.name = Name must be less than 100 characters
 Size.eventForm.description = Description must be less than 2000 characters
-Size.listingForm.name = Name must be less than 100 characters
-NotBlank.listingForm.name = Name field is required
+Size.listingForm.title = Title must be less than 100 characters
+NotBlank.listingForm.title = Title field is required
 NotBlank.listingForm.price = Price field is required
 NotBlank.listingForm.description = Description field is required
 Size.listingForm.description = Description must be less than 2000 characters
+Range.listingForm.quantity = Quantity must be between 1 and 100
+NotNull.listingForm.quantity = Quantity field is required
+NotBlank.listingForm.departmentId = Department field is required
+DepartmentConstraint.listingForm.departmentId = Invalid department
+NotNull.listingForm.used = Used field is required
+MultipleImagesConstraint.listingForm.imageFiles = Invalid image format
 ProfessionsConstraint.workerSignupForm.professions=Invalid profession
+NotBlank.editWorkerProfileForm.phoneNumber = Phone number field is required
+Size.editWorkerProfileForm.phoneNumber = Must be less than 64 characters
+NotBlank.editWorkerProfileForm.address = Address field is required
+Pattern.editWorkerProfileForm.address = Address must only contain letters, numbers and hyphens
+Size.editWorkerProfileForm.address = Must be less than 128 characters
+NotBlank.editWorkerProfileForm.businessName = Business name field is required
+Pattern.editWorkerProfileForm.businessName = Business name must only contain letters, numbers and hyphens
+Size.editWorkerProfileForm.businessName = Must be less than 128 characters
+NotBlank.editWorkerProfileForm.bio = Bio field is required
+Size.editWorkerProfileForm.bio = Must be less than 255 characters
+Pattern.editWorkerProfileForm.bio = Bio must only contain letters, numbers and hyphens
+NotBlank.phoneRequestForm.requestMessage = Message field is required
+Size.phoneRequestForm.requestMessage = Must be less than 500 characters 
+NotBlank.phoneRequestForm.phoneNumber = Phone number field is required
+Size.phoneRequestForm.phoneNumber = Must be less than 64 characters
+Pattern.phoneRequestForm.phoneNumber = Phone number must only contain numbers, plus, and hyphens
+ImageConstraint.profilePictureForm.imageFile = Invalid image format
+NotBlank.questionForm.questionMessage = Message field is required
+Size.questionForm.questionMessage = Must be less than 500 characters
+NotBlank.replyForm.inquiryId = Inquiry field is required
+NotBlank.replyForm.replyMessage = Message field is required
+Size.replyForm.replyMessage = Must be less than 300 characters
+NotBlank.requestForm.requestMessage = Message field is required
+Size.requestForm.requestMessage = Must be less than 500 characters
+DateAfterConstraint.reservationForm.date = Invalid date
+ReservationTimeConstraint.reservationForm = Invalid times
+Size.resourceForm.description = Description must be less than 100 characters
+ImageConstraint.resourceForm.imageFile = Invalid image format
+NotBlank.resourceForm.title = Title field is required
+Size.resourceForm.title = Title must be less than 64 characters
+NotNull.reviewForm.rating = Rating field is required
+Range.reviewForm.rating = Rating must be between 1 and 5
+NotBlank.reviewForm.review = Message field is required
+Size.reviewForm.review = Must be less than 255 characters
+Size.userForm.email = Email must be between 6 and 100 characters
+Email.userForm.email = Must be a valid email address
+Size.userForm.password = Password must be at least 8 characters
+Size.userForm.repeatPassword = Password must be at least 8 characters
 
 posted=posted 
 neiboSlogan=Slogan
@@ -316,6 +359,8 @@ Size.workerSignupForm.w_name=Must be less than 100 characters
 Pattern.workerSignupForm.w_surname=The surname must only contain letters
 NotBlank.workerSignupForm.w_surname=Surname field is required
 Size.workerSignupForm.w_surname=Must be less than 100 characters
+ProfessionsConstraint.workerSignupForm.professionIds= Invalid profession
+EmailConstraint.workerSignupForm.w_mail = Email already in use
 NotBlank.workerSignupForm.w_mail=Email field is required
 Size.workerSignupForm.w_mail=Must be less than 100 characters
 Email.workerSignupForm.w_mail=Must be a valid email address
@@ -333,6 +378,10 @@ Size.workerSignupForm.address=Must be less than 128 characters
 Pattern.workerSignupForm.businessName=The business name must only contain letters, numbers and hyphens
 NotBlank.workerSignupForm.businessName=Business Name field is required
 Size.workerSignupForm.businessName=Must be less than 128 characters
+NotNull.MarkAsSoldForm.quantity = Quantity field is required
+Range.MarkAsSoldForm.quantity = Quantity must be between 1 and 100
+NotNull.MarkAsSoldForm.buyerId = Buyer field is required
+NotNull.MarkAsSoldForm.requestId = Request field is required
 Plumber=Plumber
 Electrician=Electrician
 Gardener=Gardener
@@ -498,9 +547,6 @@ Units = Units
 Unit = Unit
 Sold.out = Sold out
 Available = Available
-
-Range.listingForm.quantity = Quantity must be between 1 and 100
-NotNull.listingForm.quantity = Quantity field is required
 
 
 Seller.hub = Seller Hub
