Fix errors when deleting amenities reservations

--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -516,4 +516,6 @@ Business.card = Tarjeta de servicio
 
 eg = ej.
 Currently.requesting = Actualmente solicitando
+Select.images.for.listing.suggestion = Asegurate de seleccionar todas las imágenes de una sola vez. Podés cargar hasta 3 imágenes.
+
 
