Add missing error messages and format res. dates

--- a/webapp/src/main/resources/i18n/messages_en.properties
+++ b/webapp/src/main/resources/i18n/messages_en.properties
@@ -560,3 +560,5 @@ eg = e.g.
 
 Currently.requesting = Currently requesting
 Select.images.for.listing.suggestion = Make sure to select all images in one go. You can upload up to 3 images.
+NotBlank.phoneRequestForm.phoneRequestMessage = Message field is required
+Size.phoneRequestForm.phoneRequestMessage = Must be less than 500 characters
