--- a/webapp/src/main/resources/i18n/messages_es.properties
+++ b/webapp/src/main/resources/i18n/messages_es.properties
@@ -565,4 +565,5 @@ eg = ej.
 Currently.requesting = Actualmente solicitando
 Select.images.for.listing.suggestion = Asegurate de seleccionar todas las imágenes de una sola vez. Podés cargar hasta 3 imágenes.
 
-
+NotBlank.phoneRequestForm.phoneRequestMessage = Mensaje requerido
+Size.phoneRequestForm.phoneRequestMessage = Mensaje debe contener menos de 500 caracteres
